testfx/errors/error_tests/err_02_missing_paren.fx
// 测试2: 函数调用错误 - 缺少闭合括号
println("hello"
